# pyappdist

./: .gitignore  .readthedocs.yaml  CLAUDE.md  PLAN.md  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: build-installers.yml  ci.yml  publish.yml  release.yml
design/: PLAN.md  PROPOSAL.md  macos-signing-setup.md  macos.md
docs/: Makefile  cli.rst  conf.py  configuration.rst  dependencies.rst  history.rst  how-it-works.rst  index.rst  installation.rst  make.bat  quickstart.rst  samples.rst  signing.rst  tutorial.rst
docs/formats/: app.rst  linux.rst  macapp.rst  macos.rst  msi.rst  msix.rst
e2e/: .gitignore  README.md
e2e/smoke/: EULA.rtf  README.md  pyproject.toml
e2e/smoke/src/smoke/: __init__.py
sample/helloworld/: pyproject.toml
sample/matplotlibdemo/: pyproject.toml
sample/matplotlibdemo/src/matplotlibdemo/: __init__.py
sample/pandascli/: README.md
sample/pygamedemo/: pyproject.toml
samples/datafiles/: pyproject.toml
samples/datafiles/src/datafiles/: main.py
samples/helloworld/: pyproject.toml
samples/helloworld/src/helloworld/: __init__.py
samples/matplotlibdemo/: README.md  pyproject.toml
samples/matplotlibdemo/src/matplotlibdemo/: __init__.py
samples/multiprocessingdemo/: README.md  pyproject.toml
samples/multiprocessingdemo/src/multiprocessingdemo/: __init__.py
samples/niceguidemo/: pyproject.toml
samples/niceguidemo/src/niceguidemo/: main.py
samples/pandascli/: README.md  pyproject.toml
samples/pandascli/src/pandascli/: __init__.py
samples/pygamedemo/: README.md  pyproject.toml
samples/pygamedemo/src/pygamedemo/: __init__.py
samples/pyside6demo/: README.md  pyproject.toml
samples/pyside6demo/src/pyside6demo/: __init__.py
samples/pytorchdemo/: README.md  pyproject.toml
samples/pytorchdemo/src/pytorchdemo/: __init__.py
samples/tools/: gen_mac_icons.py
src/pyappdist/: _hostexec.py  cli.py  config.py  context.py  deps.py  errors.py  main.py  runtime.py  sign.py  targets.py  wheels.py
src/pyappdist/image/: __init__.py  assemble.py  compile.py  install.py  layout.py
src/pyappdist/launcher/: __init__.py  build.py
src/pyappdist/linux/: __init__.py  build.py
src/pyappdist/macos/: __init__.py  build.py  bundle.py  icns.py  notarize.py  package.py  sign.py
src/pyappdist/msix/: __init__.py  build.py  manifest.py
src/pyappdist/posix/: __init__.py  build.py  installer.sh
src/pyappdist/resources/: launcher.c  launcher_mac.c  linux_installer.sh
src/pyappdist/wix/: __init__.py  build.py  generate.py  guid.py  scan.py
tests/: conftest.py  test_assemble.py  test_cli.py  test_config.py  test_deps.py  test_generate.py  test_guid.py  test_hostexec.py  test_launcher.py  test_linux.py  test_macos.py  test_macos_bundle.py  test_msix.py  test_runtime.py  test_scan.py  test_sign.py
tests/golden/: sample.wxs  sample_machine.wxs  sample_peruser.wxs
