[project]
name = "pyappdist"
version = "0.1.0"
description = "Python アプリを Windows 向け配布物 (image + MSI) へ変換するツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "packaging>=23",
    "pip>=26.1.1",
    "wheel>=0.47.0",
]

[project.scripts]
pyappdist = "pyappdist.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
