[project]
name = "pyappdist"
version = "0.2.0"
description = "Turn a Python app into a native installer (Windows MSI/MSIX, Linux, macOS)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Atsuo Ishimoto", email = "atsuoishimoto@gmail.com" },
]
keywords = [
    "installer", "packaging", "distribution", "wheel",
    "windows", "msi", "msix", "wix", "linux", "macos",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "packaging>=23",
    "pip>=26.1.1",
    "tomlkit>=0.15.0",
    "wheel>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/atsuoishimoto/pyappdist"
Documentation = "https://pyappdist.readthedocs.io/"
Repository = "https://github.com/atsuoishimoto/pyappdist"
Issues = "https://github.com/atsuoishimoto/pyappdist/issues"

[project.scripts]
pyappdist = "pyappdist.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
