[project]
name = "smoke"
version = "0.1.0"
description = "Minimal app for end-to-end verification of pyappdist run as an editable install"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyappdist",
]

# Unlike samples/, this references the working-tree pyappdist as editable (not PyPI).
[tool.uv.sources]
pyappdist = { path = "../../", editable = true }

[tool.pyappdist]
name = "pyappdist E2E Smoke"
python = "3.12"
identifier = "com.example.smoke"

launchers = [
  { name = "smoke", entry = "smoke:main", gui = false, icon = { macos = "assets/smoke.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "pyappdist"
scope = "user"
license = "EULA.rtf"
code_sign = false

[[tool.pyappdist.targets]]
name = "msix"
platform = "windows-x86_64"
format = "msix"
manufacturer = "pyappdist"

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"
