[project]
name = "matplotlibdemo"
version = "0.1.0"
description = "pyappdist の matplotlib GUI サンプル"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.uv.sources]
pyappdist = { path = "../../", editable = true }

[tool.pyappdist]
name = "Matplotlib Demo"
identifier = "com.example.matplotlibdemo"
python = "3.12"
target = "windows-x86_64"

launchers = [
  { name = "matplotlibdemo", entry = "matplotlibdemo:main", gui = true, icon = "assets/matplotlibdemo.ico" },
]

[tool.pyappdist.installer]
backend = "wix"
manufacturer = "Example Inc."
upgrade_code = "2D4F6A80-1C3E-4B57-9F8A-6E0D2C4B8A13"
