[project]
name = "pygamedemo"
version = "0.1.0"
description = "pyappdist の pygame-ce GUI サンプル"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pyappdist]
name = "Pygame Demo"
identifier = "com.example.pygamedemo"
python = "3.12"
target = "windows-x86_64"

launchers = [
  { name = "pygamedemo", entry = "pygamedemo:main", gui = true },
]

[tool.pyappdist.installer]
backend = "wix"
manufacturer = "Example Inc."
upgrade_code = "C4E9D2F1-3A6B-4D8E-9F12-7B0A5C3E1D88"
