[project]
name = "datafiles"
version = "0.1.1"
description = "Sample app for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.2.0",
]


[tool.pyappdist]
name = "Data files"
identifier = "com.example.datafiles"
python = "3.12"
target = "windows-x86_64"
gui = false
launchers = [
  { name = "datafiles", entry = "datafiles.main:main", gui = false },
]

[tool.pyappdist.wix]
manufacturer = "Example Inc."
upgrade_code = "CDE63634-F3D5-4D40-9521-241A0A763540"


[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyappdist>=0.1.1",
]

[tool.uv.build-backend]
data = { data = "data" }


