[project]
name = "datafiles"
version = "0.1.1"
description = "Sample app for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.2.0",
]

[tool.pyappdist]
name = "Data files"
python = "3.12"
identifier = "com.example.datafiles"
launchers = [
  { name = "datafiles", entry = "datafiles.main:main", gui = false, icon = { macos = "assets/datafiles.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
code_sign = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyappdist>=0.1.1",
]

[tool.uv.build-backend]
data = { data = "data" }

