[project]
name = "helloworld"
version = "0.1.0"
description = "Sample app for pyappdist"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Hello World"
python = "3.12"

launchers = [
  { name = "helloworld", entry = "helloworld:main", gui = false },
]

[[tool.pyappdist.targets]]
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
upgrade_code = "7E3F9A2C-5B1D-4E8A-9C6F-1A2B3C4D5E6F"

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
