[project]
name = "helloworld"
version = "0.1.0"
description = "Sample app for pyappdist"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Hello World"
python = "3.12"
identifier = "com.example.helloworld"   # CFBundleIdentifier, required for macapp/dmg targets

launchers = [
  { name = "helloworld", entry = "helloworld:main", gui = false, icon = { macos = "assets/helloworld.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
upgrade_code = "7E3F9A2C-5B1D-4E8A-9C6F-1A2B3C4D5E6F"
code_sign = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"                        # a signed/notarizable .app inside a .dmg
# icon = "assets/app.png"            # source PNG for the .app icon
# signing_identity = "Developer ID Application: Your Name (TEAMID)"
# notary_profile = "your-notary-profile"  # see docs/signing
