[project]
name = "matplotlibdemo"
version = "0.1.0"
description = "matplotlib GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Matplotlib Demo"
python = "3.12"

launchers = [
  { name = "matplotlibdemo", entry = "matplotlibdemo:main", gui = true, icon = "assets/matplotlibdemo.ico" },
]

[[tool.pyappdist.targets]]
platform = "windows-x86_64"
manufacturer = "Example Inc."
upgrade_code = "2D4F6A80-1C3E-4B57-9F8A-6E0D2C4B8A13"
