[project]
name = "matplotlibdemo"
version = "0.1.0"
description = "matplotlib GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Matplotlib Demo"
python = "3.12"
identifier = "com.example.matplotlibdemo"

launchers = [
  { name = "matplotlibdemo", entry = "matplotlibdemo:main", gui = true, icon = { windows = "assets/matplotlibdemo.ico", macos = "assets/matplotlibdemo.png", linux = "assets/matplotlibdemo.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
code-sign = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
categories = "Graphics;Science;"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"

