[project]
name = "pandascli"
version = "0.1.0"
description = "pandas CLI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Pandas CLI"
python = "3.12"

launchers = [
  { name = "pandascli", entry = "pandascli:main", gui = false },
]

[[tool.pyappdist.targets]]
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
upgrade_code = "5E2A9C71-4B83-4D6F-9A02-1C3E5B7D9F40"

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

