[project]
name = "pandascli"
version = "0.1.0"
description = "pandas CLI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Pandas CLI"
python = "3.12"
identifier = "com.example.pandascli"

launchers = [
  { name = "pandascli", entry = "pandascli:main", gui = false, icon = { macos = "assets/pandascli.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
code_sign = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"

