[project]
name = "pygamedemo"
version = "0.1.0"
description = "pyappdist の pygame-ce GUI サンプル"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Pygame Demo"
identifier = "com.example.pygamedemo"
python = "3.12"
target = "windows-x86_64"

launchers = [
  { name = "pygamedemo", entry = "pygamedemo:main", gui = true, icon = "assets/pygamedemo.ico" },
]

[tool.pyappdist.wix]
manufacturer = "Example Inc."
upgrade_code = "C4E9D2F1-3A6B-4D8E-9F12-7B0A5C3E1D88"
