[project]
name = "pygamedemo"
version = "0.1.0"
description = "pygame-ce GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Pygame Demo"
python = "3.12"

launchers = [
  { name = "pygamedemo", entry = "pygamedemo:main", gui = true, icon = "assets/pygamedemo.ico" },
]

[[tool.pyappdist.targets]]
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
upgrade_code = "C4E9D2F1-3A6B-4D8E-9F12-7B0A5C3E1D88"

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
categories = "Game;"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

