[project]
name = "pygamedemo"
version = "0.1.0"
description = "pygame-ce GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "Pygame Demo"
python = "3.12"
identifier = "com.example.pygamedemo"

launchers = [
  { name = "pygamedemo", entry = "pygamedemo:main", gui = true, icon = { windows = "assets/pygamedemo.ico", macos = "assets/pygamedemo.png", linux = "assets/pygamedemo.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
code-sign = false
allow-same-version-upgrades = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
categories = "Game;"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"

