[project]
name = "pyside6demo"
version = "0.1.0"
description = "PySide6 GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "PySide6 Demo"
python = "3.12"

launchers = [
  { name = "pyside6demo", entry = "pyside6demo:main", gui = true, icon = "assets/pyside6demo.ico" },
]

[[tool.pyappdist.targets]]
platform = "windows-x86_64"
manufacturer = "Example Inc."
upgrade_code = "3B7C1E5A-9D24-4F86-A1C3-7E0F2B4D6A88"

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
categories = "Utility;"

