[project]
name = "pyside6demo"
version = "0.1.0"
description = "PySide6 GUI sample for pyappdist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[dependency-groups]
dev = [
    "pyappdist",
]

[tool.pyappdist]
name = "PySide6 Demo"
python = "3.12"
identifier = "com.example.pyside6demo"   # CFBundleIdentifier (required for macapp/dmg)

launchers = [
  { name = "pyside6demo", entry = "pyside6demo:main", gui = true, icon = { windows = "assets/pyside6demo.ico", macos = "assets/pyside6demo.png", linux = "assets/pyside6demo.png" } },
]

[[tool.pyappdist.targets]]
name = "windows"
platform = "windows-x86_64"
format = "msi"
manufacturer = "Example Inc."
code_sign = false

[[tool.pyappdist.targets]]
name = "store"
platform = "windows-x86_64"
format = "msix"
manufacturer = "Example Inc."

[[tool.pyappdist.targets]]
name = "linux"
platform = "linux-x86_64"
format = "linux"
categories = "Utility;"

[[tool.pyappdist.targets]]
name = "macos-arm"
platform = "macos-aarch64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-intel"
platform = "macos-x86_64"
format = "macos"

[[tool.pyappdist.targets]]
name = "macos-arm-dmg"
platform = "macos-aarch64"
format = "dmg"

